syntax = "proto3";

// Importar messages de otro archivo, desde la carpeta origin 01-proto
import "studentproto/student.proto";

package test;

option go_package = "go-protobuffers-grpc/01-proto/gogrpc/testproto";

message Test {
  string id = 1;
  string name = 2;
}

// Esto es parte del streaming  lado de cliente
message Question {
  string id = 1;
  string answer = 2;
  string question = 3;
  string test_id = 4;
}

// Esto es parte del streaming lado de cliente, el servidor va a responder 
message SetQuestionResponse {
  bool ok = 1;
}

// Esto es parque de la implementacion de streaming de lado del server
message EnrollmentRquest {
  string student_id = 1;
  string test_id = 2;
}

// Esto es parque de la implementacion de streaming de lado del server
message GetStudentsPerTestRequest {
  string test_id = 1;
}

message GetTestRequest {
  string id = 1;
}

message SetTestResponse {
  string id = 1;
  string name = 2;
}

service TestService {
  rpc GetTest(GetTestRequest) returns (Test);
  rpc SetTest(Test) returns (SetTestResponse);
  // Esto es parte del streaming lado de cliente Al invocar el SetQuestion, el cliente va a enviar una serie de preguntas, un streamin de data
  rpc SetQuestion(stream Question) returns (SetQuestionResponse);

  // Esto es parte del streaming lado de server
  rpc EnrollStudents(stream EnrollmentRquest) returns (SetQuestionResponse);
  rpc GetStudentsPerTest(GetStudentsPerTestRequest) returns (stream student.Student); 
}

// $ protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative testproto/test.proto